Fix TOC alignments … again

--- a/site/themes/mttt/sass/_classes.scss
+++ b/site/themes/mttt/sass/_classes.scss
@@ -60,15 +60,13 @@
 }
 
 .index_toc_line {
-  & + & {
-    margin-top: .25em;;
-  }
+  & + & { margin-top: 1.5em; }
 
   a.line {
     display: grid;
     grid-template-columns: auto max-content;
     grid-template-areas: "title date";
-    align-items: first baseline;
+    align-items: end;
     gap: 0 .25rem;
     text-decoration: none;
 
@@ -78,6 +76,7 @@
       grid-area: title;
       display: inline-block;
       position:relative;
+      margin: 0;
       overflow: hidden;
       font-size: 1.25rem;
       font-family: var(--system-fonts-serif);
